packages/cargo_tools_vscode_macros/tests/ui/state_value_unit_struct.stderr
error: StateValue can only be derived for tuple structs with exactly one field, not unit structs
 --> tests/ui/state_value_unit_struct.rs:5:8
  |
5 | struct UnitStruct;
  |        ^^^^^^^^^^
